Object picker fix after recent CSS changes. Tag picker visible on Edit Metadata page.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@15024 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: d08cb9de688894b200260c8288583780b1589e71

--- a/root/projects/slingshot/source/web/css/yui-layout.css
+++ b/root/projects/slingshot/source/web/css/yui-layout.css
@@ -44,7 +44,7 @@
 
 #Share .yui-panel .bd .yui-u.first
 {
-   padding: 0.3em 0 0.3em 0.3em;
+   padding: 0.3em 0 0.3em 2px;
    text-align: right;
 }
 
